# CGAL_Learning

./: CMakeLists.txt  readme.md
data/: 2mesh.off  2mesh_recon.ply  cube.off  cube1.off  cubesave.off  garbage.off  mesh_shape_smoothed.off  mesh_smoothed.off  normal_out_polygon_mesh.ply  point2.ply  reconstruction.off  regions_polygon_mesh.off  regions_polygon_mesh_save.off  scale_space_out1.off
src/: CloudMesh copy.cpp  CloudMesh.cpp  CloudMesh.h  GraspPredtic.cpp  MeshSmoothing.cpp  Points_from_vertices.cpp  Points_from_vertices.h  ToolComputer.cpp  ViewMesh.cpp  WriteRGB.cpp  backup.cpp  config_file.cpp  config_file.h  config_file_test.cpp  orient_polygon_soup_example.cpp  plot.cpp  plot.h  reconstruction.cpp  scale_space.cpp  shape_detect.cpp  shape_detect.h  test.cfg  test.py
src/trimesh_ball_pivoting/: CMakeLists.txt  trimesh_ball_pivoting.cpp
